# hh_resume_spammer

./: .gitignore  README.md  config.py  example.env  get_resume_list_from_hh.py  pyproject.toml  vacancies.json  vacancies_full.json  Новый текстовый документ.txt
app/: __init__.py  forms.py  get_data.py  processing_data.py  utils.py  views.py
app/templates/: base.html  cover_letters.html  error.html  index.html  negotiations.html  vacancies.html
