[tool.poetry]
name = "hh-resume-spammer"
version = "0.1.0"
description = ""
authors = ["Aleksey Melnikov <mas-chel@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
flask-script = "^2.0.6"
flask-sqlalchemy = "^3.1.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
