[tool.poetry]
name = "hh-resume-spammer"
version = "0.1.0"
description = ""
authors = ["Aleksey Melnikov <mas-chel@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
flask-script = "^2.0.6"
flask-sqlalchemy = "^3.1.1"
requests = "^2.31.0"
tqdm = "^4.66.1"
flask-wtf = "^1.2.1"
python-dotenv = "^1.0.0"
gigachat = "^0.1.8"
gspread = "^5.12.1"
apiclient = "^1.0.4"
oauth2client = "^4.1.3"
httplib2 = "^0.22.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
